2017-11-21 Christina Zeller <chriz@keera.co.uk>:
        * Splits objectKind into objectKind and objectProperties.
        * Adds to type Collision and Collisions the ObjectKind.

2017-11-19 Christina Zeller <chriz@keera.co.uk>:
        * Adds lives for every catched diamond.
        * Adds 100 points for every catched diamond.
        * Adds proper image for diamonds (powerups).

2017-11-18 Christina Zeller <chriz@keera.co.uk>:
        * Adds basics for powerups in SDL1.

2017-11-02 Ivan Perez <ivan.perez@keera.co.uk>:
        * Version bump (0.1.5.4).
        * Adds new levels.

2017-11-02 Ivan Perez <ivan.perez@keera.co.uk>:
        * Version bump (0.1.5.3).
        * Adds new levels.
        * Adds image to cabal description.
        * Adds image to README.
        * Updates installation instructions.
        * Other code improvements.

2017-04-26 Ivan Perez <ivan.perez@keera.co.uk>:
        * Fixes Warning in cabal file.
        * Version bump (0.1.5.2).

2017-04-26 Ivan Perez <ivan.perez@keera.co.uk>:
        * Enables compilation and upload to hackage using Travis CI.
        * Version bump (0.1.5.1).

2015-06-23 Ivan Perez <ivan.perez@keera.co.uk>:
        * Version bump (0.1.5).
        * Bumps base upper bound (now compiles with GHC 7.10).