@@ -1,3 +1,6 @@
+2017-11-23 Christina Zeller <chriz@keera.co.uk>:
+        * Changes the level definitions to select which block gives what.
+
 2017-11-21 Christina Zeller <chriz@keera.co.uk>:
         * Splits objectKind into objectKind and objectProperties.
         * Adds to type Collision and Collisions the ObjectKind.
